--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,9 @@
           <div class="show-card">
           <%= image_tag @post.image, class: "show-card__img" if @post.image.attached? %>
             <div class="show-card__body">
-              <h2 class="show-card__title">投稿者：<%= @post.name %></h2>
+            <a href="/users/<%= @post.user.id %>">
+              <h2 class="show-card__title">投稿者：<%= @post.user.nickname %></h2>
+              </a>
               <p class="show-card__summary">
               <p>鍛えた部位：<%= @post.category.name %></p>
               <p>一言：<%= @post.message %></p>
