--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
 <body>
 <div class="top-gaiyou">
-  <div class="gaiyou-name">報告一覧</div>
+  <div class="mypage-name"><%= @nickname %>の投稿一覧</div>
 </div>
     <main class="main">
     <h1 class="arm-page-heading"></h1>
