--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -18,6 +18,8 @@
 .inner {
     padding-top: 50px;
     width: 1024px;
+    height: auto;
+    padding-bottom: 70px;
     margin: 0 auto;
     background-color: white;
    }
