--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,11 @@
 <div class="top-gaiyou">
   <div class="mypage-name"><%= @nickname %>の投稿一覧</div>
 </div>
+
+<%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |form| %>
+  <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+  <%= form.submit "検索", class: "search-btn" %>
+<% end %>
     <main class="main">
     <h1 class="arm-page-heading"></h1>
       <div class="arm-inner">
