--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -16,7 +16,7 @@
           <div class="arm-card">
           <%= image_tag post.image, class: "arm-card__img" if post.image.attached? %>
             <div class="card__body">
-              <h2 class="show-card__title">投稿者：<%= post.user.nickname %></h2>
+            <h2 class="card__title">投稿者：<%= post.user.nickname %></h2>
               <p class="card__summary">
               <p>鍛えた部位：<%= post.category.name %></p>
               <p>一言：<%= post.message %></p>
