--- a/app/views/posts/arm.html.erb
+++ b/app/views/posts/arm.html.erb
@@ -1,6 +1,6 @@
 <meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
 <div class="arm-top-gaiyou">
-  <div class="arm-gaiyou-name">腕報告一覧<% @nickname %></div>
+  <div class="arm-gaiyou-name">腕報告一覧</div>
 </div>
     <main class="main">
       <div class="arm-inner">
