--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,9 +25,8 @@
         <%= f.label :パスワード（再確認） %><br /></div>
         <%= f.password_field :password_confirmation, autocomplete: "off" %>
 
-      <div class="actions">
-        <%= f.submit "Sign up" %>
-      </div>
+        <%= f.submit "サインアップ" %>
+
     <% end %>
   </div>
 </div>
