--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -26,7 +26,7 @@
   .row {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0;
+    margin-top: 0px;
     margin-bottom: 0;
     max-width: 800px;
     *zoom: 1;
@@ -73,6 +73,7 @@
 
   .container {
     margin-top: 30px;
+    margin-bottom: 0px;
     padding: 30px;
     box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
     background-color: white;
@@ -96,8 +97,7 @@
     border: 1px solid #D8D8D8;
     border-radius: 10px;
     font-family: "游ゴシック", "YuGothic";
-  }
-  
+  }  
   .container h3 {
     width: 450px;
     margin: 15px 0px 25px;
@@ -113,6 +113,19 @@
     margin: 30px auto;
     padding: 10px;
     color: #D8D8D8;
+  }
+  .guest-box{
+    margin-left: 0px;
+    padding: 0px;
+    height: 0px;
+  }
+  .guest-line{
+    margin-left: 0px;
+    padding: 0px;
+    height: 0px;
+  }
+  .guest-actions{
+    background-color: blueviolet;
   }
   
   
