--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,9 +51,19 @@
       <ul>
         <li><a href="/contact/:id">愛好会概要</a></li>
         <li><a href="/posts/list">投稿一覧</a></li>
-        <li><a href="https://div-inc.slack.com/archives/CHYFPGM8B">公式Slack</a></li>
         <li><a href="/contact" class="menu-item-link">お問い合わせ</a></li>
         <li><a href="/posts/new">成果報告</a></li>
+        <% if user_signed_in? %>
+        <span><li class="menu-item">
+          <ul class="user__info">
+              <li class="menu-item"><%= link_to "マイページ", "/users/#{current_user.id}" ,class: "mypage-link" %></li>
+              <li class="menu-item"><%= link_to "ログアウト", destroy_user_session_path,  method: :delete,class: "menu-item-link" %></li>
+          </ul>
+        </span>
+      <% else %>
+      <li class="menu-item"><%= link_to "会員登録", new_user_registration_path, class: "menu-item-link" %></li>
+        <li class="menu-item"><%= link_to "ログイン", new_user_session_path, class: "menu-item-link" %></li>
+      <% end %>
         <li class="close"><span>閉じる</span></li>
      </ul>
     </nav>
