--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -1,7 +1,7 @@
 <meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
 <body>
 <div class="top-gaiyou">
-  <div class="gaiyou-name">報告一覧<% @nickname %></div>
+  <div class="gaiyou-name">報告一覧</div>
 </div>
 <%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |form| %>
   <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
