background背景指定しなおし

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -37,7 +37,7 @@
   }
   
   .first-view {
-
+    background-image: url("./images/BO151030535008_TP_V.jpg");
     background-size: cover;
     background-position: center;
     height: 800px;
