画像デプロイ

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,8 @@
 <body>
     <main class="main">
       <div class="first-view">
-
+        <img src="<%= asset_path "images/BO151030535008_TP_V.jpg" %>" />
+        <div style="background-image:url(<%= asset_path "BO151030535008_TP_V.jpg" %>)" />
         <div class="first-view-textarea">
           <h1 class="catchcopy">変化を恐れる者に<br>微塵の進化なし</h1>
           <p class="subtext">オーバーワークは己の捉え方次第</p>
