--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -4,3 +4,12 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.first-view {
+    max-width: 100%;
+    height: 650px;
+    background: url(images/BO151030535008_TP_V.jpg) fixed;
+    width: auto;
+    background-position: center;
+    background-color:black;
+  }
