--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -148,7 +148,7 @@
      .first-view {
         max-width: 100%;
         height: 650px;
-        background-image: url(<%= asset_path 'images/BO151030535008_TP_V.jpg' %>);
+        background: url(images/BO151030535008_TP_V.jpg) fixed;
         width: auto;
         background-position: center;
         background-color:black;
