--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -8,7 +8,7 @@
 .first-view {
     max-width: 100%;
     height: 650px;
-    background: url(images/BO151030535008_TP_V.jpg) fixed;
+    background-image: image-url('BO151030535008_TP_V.jpg');
     width: auto;
     background-position: center;
     background-color:black;
