--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -146,13 +146,13 @@
         text-align: center;
      }
      .first-view {
-        max-width: 100%;
-        height: 650px;
-        background: url(images/BO151030535008_TP_V.jpg) fixed;
-        width: auto;
-        background-position: center;
-        background-color:black;
-      }
+      max-width: 100%;
+      height: 650px;
+      background-image: image-url('images/BO151030535008_TP_V.jpg');
+      width: auto;
+      background-position: center;
+      background-color:black;
+  }
      .first-view-textarea {
         padding: 180px 20px;
       }
