--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -148,7 +148,7 @@
      .first-view {
       max-width: 100%;
       height: 650px;
-      background-image: image-url('images/BO151030535008_TP_V.jpg');
+      background-image: image-url('BO151030535008_TP_V.jpg');
       width: auto;
       background-position: center;
       background-color:black;
