--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,8 +5,8 @@
 .first-view {
     max-width: 100%;
     height: 650px;
-    background: url(images/BO151030535008_TP_V.jpg) fixed;
+    background-image: image-url('images/BO151030535008_TP_V.jpg');
     width: auto;
     background-position: center;
     background-color:black;
-  }
+}
