--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -145,7 +145,14 @@
         line-height: 1.6;
         text-align: center;
      }
-
+     .first-view {
+        max-width: 100%;
+        height: 650px;
+        background-image: image-url('BO151030535008_TP_V.jpg');
+        width: auto;
+        background-position: center;
+        background-color:black;
+      }
      .first-view-textarea {
         padding: 180px 20px;
       }
