--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 <body>
     <main class="main">
       <div class="first-view">
-      <%= image_tag asset_path("images/BO151030535008_TP_V.jpg") %>
+      <%= image_tag asset_path('images/BO151030535008_TP_V.jpg') %>
         <div class="first-view-textarea">
           <h1 class="catchcopy">変化を恐れる者に<br>微塵の進化なし</h1>
           <p class="subtext">オーバーワークは己の捉え方次第</p>
