--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,15 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 <body>
     <main class="main">
-      <div class="first-view">
+      <ul class="first-view">
+       <li>
+        <%= image_tag "images/BO151030535008_TP_V.jpg">
         <div class="first-view-textarea">
           <h1 class="catchcopy">変化を恐れる者に<br>微塵の進化なし</h1>
           <p class="subtext">オーバーワークは己の捉え方次第</p>
         </div>
-      </div>
+       </li>
+      </ul>
 
       <div class="upper-contents">
         <div class="heading-name">M U S C L E</div>
